--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-prepare-me",
-  "version": "0.0.2",
+  "version": "0.0.3-pre",
   "description": "Prepare me code guidelines settings.",
   "homepage": "",
   "author": {
