--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-prepare-me-code-guidelines",
-  "version": "1.0.0",
+  "version": "1.0.1-pre",
   "description": "Prepare me code guidelines settings.",
   "homepage": "",
   "author": {
