--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-prepare-me-code-guidelines",
-  "version": "1.1.1-pre",
+  "version": "1.1.1",
   "description": "Prepare me code guidelines settings.",
   "homepage": "",
   "author": {
