--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "generator-prepare-me-code-guidelines",
-  "version": "1.1.3-pre",
-  "description": "Prepare me code guidelines settings.",
+  "name": "generator-superlinters",
+  "version": "0.1.0",
+  "description": "Linter configurations for Superkoders.",
   "homepage": "",
   "author": {
     "name": "jena.hajek",
@@ -13,7 +13,8 @@
   ],
   "main": "generators/index.js",
   "keywords": [
-    "yeoman-generator"
+    "yeoman-generator",
+    "superkoders"
   ],
   "devDependencies": {
     "yeoman-test": "^1.7.0",
@@ -70,7 +71,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jenahajek/generator-prepare-me-code-guidelines"
+    "url": "https://bitbucket.org/superkoders/generator-superlinters/src"
   },
   "license": "Apache-2.0"
 }
