--- a/generators/app/templates/.editorconfig
+++ b/generators/app/templates/.editorconfig
@@ -8,11 +8,11 @@ root = true
 [*]
 # Indentation style
 # Possible values - tab, space
-indent_style = tab
+indent_style = space
 
 # Indentation size in single-spaced characters
 # Possible values - an integer, tab
-indent_size = 4
+indent_size = 2
 
 # Line ending file format
 # Possible values - lf, crlf, cr
