--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "generator-superlinters",
-  "version": "0.1.0",
-  "description": "Linter configurations for Superkoders.",
+  "name": "generator-prepare-me-code-guidelines",
+  "version": "1.1.3-pre",
+  "description": "Prepare me code guidelines settings.",
   "homepage": "",
   "author": {
     "name": "jena.hajek",
@@ -13,8 +13,7 @@
   ],
   "main": "generators/index.js",
   "keywords": [
-    "yeoman-generator",
-    "superkoders"
+    "yeoman-generator"
   ],
   "devDependencies": {
     "yeoman-test": "^1.7.0",
@@ -71,7 +70,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://bitbucket.org/superkoders/generator-superlinters/src"
+    "url": "https://github.com/jenahajek/generator-prepare-me-code-guidelines"
   },
   "license": "Apache-2.0"
 }
